# scampiman

./: .gitignore  LICENSE  README.md  pyproject.toml  test.py
.github/workflows/: publish.yml  test.yml
environment/: scampiman.yml
plot_script/: plot_scampiman_batch1.R
src/pct/: pct.py  scampiman.py
src/pct/funcs/: pctfuncs.py  scampifuncs.py
src/scampiman/: scampiman.py
src/scampiman/funcs/: scampifuncs.py
src/test_data/: mpox_5KB_ITR_freyja.bed  mpox_5KB_ITR_freyja.fasta  mpox_5KB_ITR_freyja.fasta.fai  sars-cov-2_ARTICv5.3.2_freyja.fasta  sars-cov-2_ARTICv5.3.2_freyja.primer.bed  test.bam
tests/: test_scampiman.py
tests/test_data/: sars-cov-2_ARTICv5.3.2_subset.primer.bed  sars-cov-2_NC_045512.2.fasta.fai
