[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scampiman"
version = "0.1.0" # should match version in main script
authors = [
  { name="Mike Tisza", email="michael.tisza@gmail.com" }, # your name here 
]
description = "A pipeline to align, quality control, and summarize tiled amplicon coverage (of a virus, probably) from sequencing reads."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pysam>=0.22.0",
    "mappy>=2.26"
]

# instructs setuptools to look in the src/ directory for scripts
[tool.setuptools.packages.find]
where = ["src"]


[project.scripts]
# this is how you call the main tool from the command line
# more commands can be given if there are multiple CLI tools in the package
scampiman = "scampiman.scampiman:scampiman"

[project.urls]
"Homepage" = "https://github.com/tiszalab/scampiman"
"Bug Tracker" = "https://github.com/tiszalab/scampiman/issues"